Fix nav alignment on home page

--- a/css/base.css
+++ b/css/base.css
@@ -186,7 +186,8 @@ main {
     padding: 1rem;
 }
 
-nav #alert-pool { flex: 1 }
+nav #alert-pool,
+nav > :empty { flex: 1 }
 
 select {
     -webkit-appearance: none;
